# COMP371_all

AssignmentTemplates/Assignment1/code/: CMakeLists.txt  main.cpp
AssignmentTemplates/Assignment1/code/assets/: equilateral.txt  simple.txt  simple2.txt  sphere.txt
AssignmentTemplates/Assignment2/code/: CMakeLists.txt  main.cpp
AssignmentTemplates/Assignment2/code/assets/: simple3.txt  teapot1.txt
COMP371_RaytracerBase/code/: CMakeLists.txt
Lab_capsules/capsule1/code/: CMakeLists.txt  README.txt  lab01.cpp
Lab_capsules/capsule2/code/: CMakeLists.txt  README.txt  capsule02.cpp  lab02.cpp
Lab_capsules/capsule3/: CMakeLists.txt  README.txt
Lab_capsules/capsule3/assets/: Line.fragmentshader.glsl  Line.vertexshader.glsl  Phong.fragmentshader.glsl  Phong.vertexshader.glsl  StandardShading.fragmentshader.glsl  StandardShading.vertexshader.glsl  TextVertexShader.fragmentshader.glsl  TextVertexShader.vertexshader.glsl
Lab_capsules/capsule3/src/: GLUtils.cpp  GLUtils.h  ObjModel.cpp  ObjModel.h  ObjModel2.cpp  ObjParser.cpp  ObjParser.h  README.txt  RUIObject.cpp  RUIObject.h  RenderModel.cpp  RenderModel.h  TCamera.cpp  TCamera.h  TOGLApp.cpp  TOGLApp.h  TOGLWindow.cpp  TOGLWindow.h  TOGWLayer.cpp  TOGWLayer.h  TTrackBall.cpp  TTrackBall.h  TTrackBall360.cpp  TTrackBall360.h  TTrackBall360google.cpp  TTrackBall360google.h  Text.cpp  Text.h  Virtual3DLayer.cpp  Virtual3DLayer.h  main.cpp
Lab_capsules/capsule3/src/TKernel/: BarycentricManager.cpp  BarycentricManager.h  TMatrix.h  TTuple.h
Lab_capsules/capsule4/: CMakeLists.txt
Lab_capsules/capsule4/shaders/: blinnPhong.frag.glsl  phong.frag.glsl  toon.frag.glsl  toon.vert.glsl
Lab_capsules/capsule4/src/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Square.cpp  Square.h  main.cpp
Lab_capsules/capsule5/cubemap/: CMakeLists.txt
Lab_capsules/capsule5/cubemap/src/: cubemap.cpp
Lab_capsules/capsule5/cubemap/src/learnopengl/: camera.h  mesh.h  model.h  shader.h  shader_m.h  stb_image.cpp
Lab_capsules/capsule5/texture/: CMakeLists.txt  stb_image.h  texture_mapping.cpp
